# git-phoenix

./: .gitignore  README.md  changelog.md  default.nix  gen-cabal.sh  git-phoenix.cabal  git-phoenix.cabal.template  trace-embrace.yaml  unpack-git-repo.sh
.github/workflows/: haskell.yml  test.yml
app/: GitPhoenix.hs
nix/: default.nix  local.sources.json  sources.json
nix/haskell/: overlay.nix
src/Data/Git/: Phoenix.hs
src/Data/Git/Phoenix/: App.hs  CmdArgs.hs  CmdRun.hs  Commit.hs  CommitGraph.hs  CommitSearch.hs  Extraction.hs  HeadsDiscovery.hs  Io.hs  Object.hs  Prelude.hs  Pretty.hs  Repo.hs  Sha.hs  ShaCollision.hs  Tree.hs  Uber.hs
src/Lazy/: Scope.hs
src/Lazy/Scope/: Bs.hs  GetContents.hs  Io.hs  Scoped.hs  Type.hs
test/: Driver.hs  RunUberExtract.hs
test/Data/Git/Phoenix/: Test.hs
test/Data/Git/Phoenix/Test/: UberCommitSearch.hs  UberExtract.hs  UberHeadsDiscovery.hs
