cabal-version: 3.0
name:          git-phoenix
version:       0.0.1
synopsis:      Recove Git repositories from disk recovery tool output (photorec)
description:
    Tool helps to recover Git repositories from photorec output.

homepage:      http://github.com/yaitskov/git-phoenix
license:       BSD-3-Clause
author:        Daniil Iaitskov
maintainer:    dyaitskov@gmail.com
copyright:     Daniil Iaitkov 2025
category:      System
build-type:    Simple
bug-reports:   https://github.com/yaitskov/git-phoenix/issues
extra-doc-files:
  changelog.md
tested-with:
  GHC == 9.12.2

source-repository head
  type:
    git
  location:
    https://github.com/yaitskov/git-phoenix.git

common base
  default-language: GHC2024
  ghc-options: -Wall
  default-extensions:
    DefaultSignatures
    MultilineStrings
    NoImplicitPrelude
    OverloadedStrings
    TemplateHaskell
  build-depends:
      base >=4.7 && < 5
    , bytestring >= 0.12.1 && < 1
    , directory < 2
    , optparse-applicative
    , relude >= 1.2.2 && < 2
    , tagged < 1
    , unliftio

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Data.Git.Phoenix
    Data.Git.Phoenix.App
    Data.Git.Phoenix.CmdArgs
    Data.Git.Phoenix.Commit
    Data.Git.Phoenix.CommitGraph
    Data.Git.Phoenix.CommitSearch
    Data.Git.Phoenix.Extraction
    Data.Git.Phoenix.Io
    Data.Git.Phoenix.Object
    Data.Git.Phoenix.Prelude
    Data.Git.Phoenix.Repo
    Data.Git.Phoenix.Sha
    Data.Git.Phoenix.ShaCollision
    Data.Git.Phoenix.Tree
    Data.Git.Phoenix.Uber
  build-depends:
    , base                    < 5
    , binary                  < 1
    , conduit                 < 2
    , containers              < 1
    , deepseq                 < 2
    , file-io                 < 1
    , filepath                < 2
    , memory                  < 1
    , pretty-hex              < 2
    , SHA                     < 2
    , regex-tdfa              < 2
    , template-haskell        < 3
    , time                    < 2
    , trace-embrace           >= 1.2.0 && < 2
    , word8                   < 1
    , zlib                    < 1

executable git-phoenix
  import: base
  ghc-options: -Wall -threaded -with-rtsopts=-N
  main-is: GitPhoenix.hs
  other-modules:
      Paths_git_phoenix
  autogen-modules:
      Paths_git_phoenix
  hs-source-dirs:
      app
  build-depends:
      git-phoenix
